# datamaker-faker

./: .gitignore  README.md  datafaker.csv  main.py  pyproject.toml
src/faker/: __init__.py  fields.py
src/faker/core/: faker.py
src/faker/data/: countries.txt
src/faker/data/geo/: city.csv  country.csv
src/faker/data/person/: first_name.csv  last_name.csv  sex.csv
src/faker/models/: field.py  geo.py  person.py  random.py
src/faker/utils/: helpers.py
tests/: test_main.py  test_mapper.py  test_seed.py
