[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faker"
dynamic = ["version"]
description = 'A python lib for data generation'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["faker", "data", "synthetic", "generate"]
authors = [
  { name = "Ratul Maharaj", email = "56479869+RatulMaharaj@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy==1.26.4"]

[project.urls]
Documentation = "https://github.com/unknown/faker#readme"
Issues = "https://github.com/unknown/faker/issues"
Source = "https://github.com/unknown/faker"

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.hatch.version]
path = "src/faker/__about__.py"

[tool.hatch.envs.default]
path = ".hatch"
dependencies = ["coverage[toml]>=6.5", "pytest", "ruff"]

[tool.hatch.envs.default.scripts]
lint = "ruff check {args:.}"
format = "ruff format {args:.}"
test = "pytest {args:tests} -s --durations=0"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]
main = "python src/faker/__init__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/faker tests}"

[tool.coverage.run]
source_pkgs = ["faker", "tests"]
branch = true
parallel = true
omit = ["src/faker/__about__.py"]

[tool.coverage.paths]
faker = ["src/faker", "*/faker/src/faker"]
tests = ["tests", "*/faker/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
